<resources>
    <string name="app_name">DevotTED</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDqUkWbZiLaCDoG3Em4rpVD-pqNlnInivA</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="spiritual">Spiritual</string>
    <string name="religious">Religious</string>
    <string name="wellness">Wellness</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Got it</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="forgot_password_g">Forgot Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="register">Register</string>
    <string name="send_password_to_my_email">Send Password to my email</string>
    <string name="please_provide_your_registered_email_id_here">Please provide your registered email id here</string>
    <string name="guest_user"><u>Guest User</u></string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp_will_be_sent_to_this_mobile_number_for_verification">OTP will be sent to this Mobile Number for verification</string>
    <string name="existing_user">Existing User ?</string>
    <string name="previous">Previous</string>
    <string name="please_select_language">Please Select Language</string>
    <string name="you_can_change_your_language_choice_in_settings_at_any_time">You can change your language choice in Menu/Settings at any time.</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="no_internet_connection">No Internet Connection Available. \n\nPlease turn on your mobile data or Wifi to proceed further</string>
    <string name="proceed">Proceed</string>
    <string name="login_with_email">Login with Email / Mobile</string>
    <string name="module_under_development">Module Under Development</string>
    <string name="login_with">Login with :</string>
    <string name="email">Email</string>
    <string name="please_enter_a_valid_password">Password should have minimum 6 characters</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_a_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_fullname">Please enter fullname</string>
    <string name="registration_successfull">Registration Successful</string>
    <string name="login_successful">Login Successful</string>
    <string name="confirm_your_mobile_number">Confirm your mobile number.</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="by_signing_up_i_agree_to_the_terms_and_condition_privacy_policies">By Signing up, I agree to the \n Terms and conditions, Privacy Policies</string>
    <string name="sign_in">Sign in</string>
    <string name="otp_sent_to_that_mobile_number_for_verification">OTP has been sent to the Mobile Number for verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="otp_here">OTP here</string>
    <string name="waiting_to_automatically_detect_an_sms_sent_to_mobile_number_n_n_enter_the_otp_below_in_case_if_we_fail_to_detect_the_sms_automatically">Waiting to automatically detect an sms sent to mobile number \n\n (Enter the OTP below in case it is unable to detected automatically.)</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="back">Back</string>
    <string name="please_enter_otp_sent_to_your_registered_mobile_number">Please enter OTP sent to your registered mobile number</string>
    <string name="please_enter_a_valid_otp">OTP should have 4 characters</string>
    <string name="otp_resent_successfully">OTP resent successfully</string>
    <string name="otp_verification_successfull">OTP verification successful</string>
    <string name="you_just_got_verified">You just got Verified !</string>
    <string name="change">Change</string>
    <string name="your_location">Your Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_have_decided_to_spread_the_app_to_your_friends_amp_family"><![CDATA[You have decided to spread the app to your Friends & Family.!]]></string>
    <string name="thanks_for_your_trust_in_us_and_we_will_ensure_better_services_in_coming_furture">Thanks for your trust in us and we will ensure better services in coming future</string>
    <string name="post">post</string>
    <string name="post_an_update">Post an Update</string>
    <string name="sree_venkateshwara_temple">Sree venkateshwara Temple</string>
    <string name="temple_is_very_good_and_peaceful_prime_and_decent_location_priest_is_very_well_behaving_and_good_n_n_this_is_having_good_number_of_volunteers_and_devotees_all_are_co_operative_and_friendly_volunteers_are_very_active_and_updating_very_preciously">Temple is very good and peaceful. Prime and decent Location. Priest is very well behaving and good. \n\n This is having good number of volunteers and devotees. All are co-operative and friendly. Volunteers are very active and updating very preciously.</string>
    <string name="add_photo">Add Photo</string>
    <string name="search_temple_posts_events">Temples, Posts, Events, etc.</string>
    <string name="sort">sort</string>
    <string name="filter">filter</string>
    <string name="select_gods">Select Gods</string>
    <string name="_45_gods_available_nearby">45 Gods Available nearby</string>
    <string name="temple_details">Temple Details</string>
    <string name="comments_10">Comments (10)</string>
    <string name="type_your_comment_here">Type your comment here</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="distance">Distance</string>
    <string name="by_god">By God</string>
    <string name="ratings">Ratings</string>
    <string name="popular">Popular</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="search">Search</string>
    <string name="sort_temples_by">Sort Temples By</string>
    <string name="popularity">Popularity</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="today">Today</string>
    <string name="_12_updates">12 Updates</string>
    <string name="groups">Groups</string>
    <string name="panchang">Panchang</string>
    <string name="favourites">Favourites</string>
    <string name="extras">Extras</string>
    <string name="active_since_29_may_2018">Active since 29 May, 2018</string>
    <string name="profile">Profile</string>
    <string name="help_center">Help Center</string>
    <string name="write_to_us">Write to us</string>
    <string name="settings">Settings</string>
    <string name="version_0_1_1">Version 0.1.1</string>
    <string name="reviews_5">Reviews (5)</string>
    <string name="add_new">Add New</string>
    <string name="namaste_user">Namasthe </string>
    <string name="share_it_via">Share it Via</string>
    <string name="others">Others</string>
    <string name="varanasi">Varanasi</string>
    <string name="_224_reviews">224 Reviews</string>
    <string name="location">Location</string>
    <string name="invite_a_volunteer_to_your_temple">Invite a Volunteer to your temple</string>
    <string name="know_more">Know More</string>
    <string name="volunteer">Volunteer</string>
    <string name="view_all">View All</string>
    <string name="timings">Timings</string>
    <string name="about_temple">About Temple</string>
    <string name="write_an_update">Write an update</string>
    <string name="my_favorite_temples">My Favorite Temples</string>
    <string name="sree_hanuman_temple_updates">sree hanuman temple updates</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="quote">Quote</string>
    <string name="daily_dose_of_updated_mantras">Daily dose of updated mantras</string>
    <string name="it_is_better_to_live_your_own">It is better to live your own.</string>
    <string name="meaning_imitation_of_somebody_else_s_life_with_perfection">Meaning: Imitation of somebody else\'s life with perfection</string>
    <string name="user_name">User Name</string>
    <string name="temple0_dummy_text">Located at Chilkur in Moinabad mandal. Around 23 km from Mehdipatnam. \n\n Temple of Lord Sri Venkateshwara also popularly called "Visa Balaji"…!! This name is due to a very large number of devotees with a wish to go to abroad, got their wish fulfilled. It is customary to encircle the temple (known as Pradakshina) eleven times and pray to God for a specific wish. Once this wish comes true, the Devotee has to visit again and perform 108 Pradakshinas. This is one of the very few temples in India which does not accept monetary donations in a Hundi and therefore does not fall under the purview of endowments dept of our Government The Temple circulates a monthly magazine "Vak" which means Speech (Of GOD), nominally priced at Rs 5.00 only. This magazine is the only source of Temple-Income.</string>
    <string name="temple1_dummy_text">Ashtalakshmi Temple is very famous temple of Goddess Lakshmi Devi, is located between DilshukhNagar and LB Nagar. The Rajagopuram of this temple is intricately carved with beautiful designs that catches the eyes of the visitors. Amazing temple with ample parking. Not commercialized and retains the spiritual aspect. A very well maintained temple with peaceful ambience. Temple timings: All days of the week from 6:00 AM - 12:00 noon and from 5:00 PM - 9:00 PM</string>
    <string name="temple2_dummy_text">Chilkur Balaji Temple, popularly known as "Visa Balaji Temple'', is an ancient Hindu temple of Lord Balaji on the banks of Osman Sagar in Hyderabad. This temple has no hundi and neither accepts any money from devotees. It has pleasing architecture too, boasting of being one of the oldest temples in Telangana. Temple timings: All days of the week from 5:00 AM - 8:00 pm.</string>
    <string name="english">English</string>
    <string name="telugu">తెలుగు</string>
    <string name="hindi">हिंदी</string>
    <string name="dev_line1">Get updates from your favorite Temples, Events, Posts.</string>
    <string name="dev_line2">Volunteer for God\'s Seva along with temple groups</string>
    <string name="dev_line3">Get involved in religious discussions, share your views</string>
    <string name="dev_line4">Daily updates on horoscope, Dharma, and other interesting topics</string>
    <string name="well_line1">Get updates on Mind, Body health with holistic approach</string>
    <string name="well_line2">Volunteer to help, improve others health and life</string>
    <string name="well_line3">Discuss wellness related topics, share your views</string>
    <string name="well_line4">Find ancient, latest content to keep your health optimum.</string>
</resources>