<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/twentyfive_dp"
    app:cardBackgroundColor="@color/colorWhite"
    card_view:cardCornerRadius="@dimen/seven_dp"
    card_view:cardElevation="@dimen/five_dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="@dimen/ten_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/five_dp">

        <com.devotted.utils.views.CustomTextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/five_dp"
            android:text="@string/app_name"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/eighteen_sp"
            app:txt_font_type="bold" />

        <com.devotted.utils.views.CustomTextView
            android:id="@+id/txtSelectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center"
            android:padding="@dimen/five_dp"
            android:text="@string/please_select_language"
            android:textColor="@color/color_vvvDarkGrey"
            app:txt_font_type="bold" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none">

            <RadioGroup
                android:id="@+id/rgLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/five_dp">

                <RadioButton
                    android:id="@+id/rbEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/three_dp"
                    android:background="@drawable/btn_bg_light_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:minWidth="@dimen/seventy_dp"
                    android:paddingBottom="@dimen/five_dp"
                    android:paddingEnd="@dimen/ten_dp"
                    android:paddingStart="@dimen/ten_dp"
                    android:paddingTop="@dimen/five_dp"
                    android:text="@string/english"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/seventeen_sp" />

                <RadioButton
                    android:id="@+id/rbTelugu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/three_dp"
                    android:background="@drawable/btn_bg_light_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:minWidth="@dimen/seventy_dp"
                    android:paddingBottom="@dimen/five_dp"
                    android:paddingEnd="@dimen/ten_dp"
                    android:paddingStart="@dimen/ten_dp"
                    android:paddingTop="@dimen/five_dp"
                    android:text="@string/telugu"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/seventeen_sp" />

                <RadioButton
                    android:id="@+id/rbHindi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/three_dp"
                    android:background="@drawable/btn_bg_light_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:minWidth="@dimen/sixty_dp"
                    android:paddingBottom="@dimen/five_dp"
                    android:paddingEnd="@dimen/ten_dp"
                    android:paddingStart="@dimen/ten_dp"
                    android:paddingTop="@dimen/five_dp"
                    android:text="@string/hindi"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/seventeen_sp" />

            </RadioGroup>

        </HorizontalScrollView>

        <com.devotted.utils.views.CustomTextView
            android:id="@+id/txtLanguageChangeHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/twentyfive_dp"
            android:layout_marginRight="@dimen/twentyfive_dp"
            android:gravity="center"
            android:text="@string/you_can_change_your_language_choice_in_settings_at_any_time"
            android:textColor="@color/color_vvDarkGrey"
            android:textSize="@dimen/eleven_sp"
            app:txt_font_type="light" />

        <com.devotted.utils.views.CustomTextView
            android:id="@+id/txtProceed"
            style="@style/AppButtonStyle"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/proceed"
            app:txt_font_type="bold" />

    </LinearLayout>

</android.support.v7.widget.CardView>