<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_linear"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/five_dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.45"
            android:padding="@dimen/twentyfive_dp"
            android:src="@drawable/ic_flower" />

        <LinearLayout
            android:id="@+id/linHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/five_dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp"
                android:src="@drawable/ic_wellness" />

            <com.devotted.utils.views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fifteen_dp"
                android:text="@string/wellness"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twentytwo_sp"
                app:txt_font_type="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linHeading"
            android:layout_marginLeft="@dimen/twentyfive_dp"
            android:layout_marginRight="@dimen/twentyfive_dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.devotted.utils.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp"
                android:drawablePadding="@dimen/fifteen_dp"
                android:drawableStart="@drawable/ic_health"
                android:gravity="center_vertical"
                android:text="@string/well_line1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sixteen_sp"
                app:txt_font_type="regular" />

            <com.devotted.utils.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp"
                android:drawableStart="@drawable/ic_social_care"
                android:drawablePadding="@dimen/fifteen_dp"
                android:gravity="center_vertical"
                android:text="@string/well_line2"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sixteen_sp"
                app:txt_font_type="regular" />

            <com.devotted.utils.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp"
                android:drawableStart="@drawable/ic_conversation"
                android:drawablePadding="@dimen/fifteen_dp"
                android:gravity="center_vertical"
                android:text="@string/well_line3"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sixteen_sp"
                app:txt_font_type="regular" />

            <com.devotted.utils.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fifteen_dp"
                android:drawableStart="@drawable/ic_manuscript"
                android:drawablePadding="@dimen/fifteen_dp"
                android:gravity="center_vertical"
                android:text="@string/well_line4"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sixteen_sp"
                app:txt_font_type="regular" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>