<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/twenty_dp"
    app:cardBackgroundColor="@color/colorWhite"
    card_view:cardCornerRadius="@dimen/seven_dp"
    card_view:cardElevation="@dimen/five_dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="@dimen/ten_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/ten_dp">

        <com.devotted.utils.views.CustomTextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_close"
            android:gravity="center_vertical"
            android:padding="@dimen/five_dp"
            android:text="@string/forgot_password_g"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/eighteen_sp"
            app:txt_font_type="bold" />

        <com.devotted.utils.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/please_provide_your_registered_email_id_here"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/thirteen_sp"
            app:txt_font_type="light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp"
                android:src="@drawable/ic_email" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:hintTextAppearance="@style/HintText">

                <com.devotted.utils.views.CustomEditText
                    android:id="@+id/edtEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/color_vvvDarkGrey"
                    app:txt_font_type="regular" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <com.devotted.utils.views.CustomTextView
            android:id="@+id/txtSend"
            style="@style/AppButtonStyle"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/seven_dp"
            android:text="@string/send_password_to_my_email"
            android:textSize="@dimen/fifteen_sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>