<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_linear"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_inside_curve_orange"
            android:orientation="vertical"
            android:padding="@dimen/thirty_dp">

            <com.devotted.utils.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/twenty_dp"
                android:text="@string/namaste_user"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/seventeen_sp" />

            <com.devotted.utils.views.CustomTextView
                android:id="@+id/txtHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/twenty_dp"
                android:paddingTop="@dimen/five_dp"
                android:text="@string/you_just_got_verified"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twentyone_sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewSelection"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_above="@+id/txtProceed"
                android:layout_margin="@dimen/seven_dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:padding="@dimen/ten_dp"
                android:scrollbars="none" />

            <com.devotted.utils.views.CustomTextView
                android:id="@+id/txtProceed"
                style="@style/AppButtonStyleBorder"
                android:layout_width="wrap_content"
                android:layout_above="@+id/bottomView"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/seven_dp"
                android:background="@drawable/gradient_horizontal"
                android:text="@string/proceed"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/twenty_sp" />

            <View
                android:id="@+id/bottomView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_dp"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
